tests/invalid/any_to_ground_in_ite_cond_nomax.err_exp
any_to_ground_in_ite_cond_nomax.m:033: In clause for `main(di, uo)':
any_to_ground_in_ite_cond_nomax.m:033:   in argument 1 of call to predicate `any_to_ground_in_ite_cond_nomax.p'/1:
any_to_ground_in_ite_cond_nomax.m:033:   scope error: attempt to bind a non-local variable inside the condition of an if-then-else.
any_to_ground_in_ite_cond_nomax.m:033:   Variable `X' has instantiatedness `any',
any_to_ground_in_ite_cond_nomax.m:033:   expected instantiatedness was `ground'.
For more information, recompile with `-E'.
